# LLM-Behavior-Analysis

./: README.md  pyproject.toml  requirements.txt
config/: model_config.yaml
data/ambiguous/: ambiguous.json
data/bias/: bias.json
data/context/: context.json
data/factual/: factual.json
data/reasoning/: reasoning.json
data/safety/: safety.json
results/metrics/: final_metrics.csv  summary_metrics.csv
results/raw_outputs/: flan_t5.csv  gpt2.csv  phi-1_5.csv
src/: run_evaluation.py  run_generation.py  run_plots.py
src/utils/: data_loader.py  generate_responses.py  load_models.py
